--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -37,7 +37,8 @@ jobs:
                   sleep 4
                   docker exec -t emulator-headless /bin/sh -c  'echo no | avdmanager create avd --force -n avd28 -k "system-images;android-28;google_apis;x86_64"'
                   sleep 4
-                  docker exec -t emulator-headless  /bin/sh -c  'emulator -avd avd28 -wipe-data -no-boot-anim -no-audio -accel on -gpu off -no-window'&
+                                                                 
+                  docker exec -t emulator-headless  /bin/sh -c  'emulator -avd avd28 -no-audio -no-window -no-accel -wipe-data -no-window -no-boot-anim'&
                   sleep 4
                   /usr/local/lib/android/sdk/platform-tools/adb devices
                   sleep 40
