--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -31,7 +31,7 @@ jobs:
                   sleep 4
                   docker exec -t emulator-headless /bin/sh -c  'echo no | avdmanager create avd --force -n avd28 -k "system-images;android-28;google_apis;x86_64"'
                   sleep 4                                                 
-                  docker exec -t emulator-headless  /bin/sh -c  'emulator -avd avd28 -no-audio -no-window -no-accel -no-snapshot -no-window -no-boot-anim'&
+                  docker exec -t emulator-headless  /bin/sh -c  'emulator -avd avd28 -no-audio -no-window -no-accel -no-snapshot -wipe-data -no-window -no-boot-anim'&
                   sleep 120
                   /usr/local/lib/android/sdk/platform-tools/adb devices
                   /usr/local/lib/android/sdk/platform-tools/adb install /home/runner/work/codewars_challenges/codewars_challenges/apps/app-debug.apk
