--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -33,8 +33,11 @@ jobs:
                   sleep 4
                   docker exec -t emulator-headless  /bin/sh -c  'emulator -avd avd28 -no-audio -no-window -no-accel -partition-size 8000 -wipe-data -no-window -no-boot-anim'&
                   sleep 120
+                  echo "check devices again"
                   /usr/local/lib/android/sdk/platform-tools/adb devices
+                  echo "installing the app"
                   /usr/local/lib/android/sdk/platform-tools/adb install /home/runner/work/codewars_challenges/codewars_challenges/apps/app-debug.apk
+                  echo "everything is fine.. deleting docker container again"
                   docker container stop emulator-headless
                   docker container rm emulator-headless
  
