--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -5,47 +5,11 @@ jobs:
         runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@v2
-            - uses: actions/setup-java@v1
-              with:
-                  java-version: '11.x'
-            - uses: subosito/flutter-action@v1
-              with:
-                  flutter-version: '2.10.1'
-                  channel: 'stable'
-            - name: Setup Android SDK
-              uses: android-actions/setup-android@v2
             - name: start emulator headless
               shell: bash
               run: |
-                  ls /home/runner/work/codewars_challenges/codewars_challenges
-                  sudo apt-get update
-                  echo "starting installing"
-                  /usr/local/lib/android/sdk/platform-tools/adb version  
-                  /usr/local/lib/android/sdk/platform-tools/adb kill-server
-                  /usr/local/lib/android/sdk/cmdline-tools/latest/bin/sdkmanager "platform-tools" "platforms;android-29" "emulator"
-                  /usr/local/lib/android/sdk/cmdline-tools/latest/bin/sdkmanager "system-images;android-29;google_apis;x86_64"
-                  docker run  --privileged -d --name emulator-headless  -p 5037:5037 -v /usr/local/lib/android/sdk:/opt/android-sdk thyrlian/android-sdk
-                  /usr/local/lib/android/sdk/platform-tools/adb connect 0.0.0.0:5037 && /usr/local/lib/android/sdk/platform-tools/adb connect 0.0.0.0:5037
-                  sleep 3
-                  /usr/local/lib/android/sdk/platform-tools/adb devices
-                  sleep 4
-                  docker exec -t emulator-headless /bin/sh -c  'echo no | avdmanager create avd --force -n avd28 -k "system-images;android-29;google_apis;x86_64"'
-                  sleep 4
-                  docker exec -t emulator-headless  /bin/sh -c  'emulator -avd avd28 -no-audio -no-window -no-accel -partition-size 8000 -wipe-data -no-window -no-boot-anim'&
-                  sleep 120
-                  echo "check devices again"
-                  /usr/local/lib/android/sdk/platform-tools/adb devices
-                  echo "installing the app"
-                  /usr/local/lib/android/sdk/platform-tools/adb install /home/runner/work/codewars_challenges/codewars_challenges/apps/app-debug.apk
-                  echo "everything is fine.. deleting docker container again"
-                  docker container stop emulator-headless
-                  docker container rm emulator-headless
- 
- 
-                  
-   
-                  
-                  
-                  
- 
-                
+                  echo "check if we can run KVM"
+                  egrep -c '(vmx|svm)' /proc/cpuinfo
+                  sudo kvm-ok
+                  modprobe kvm_intel
+                  lsmod | grep kvm
