--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -1,3 +1,4 @@
+name: MDE_Test
 on: [push, pull_request]
 jobs:
     analyze-and-test:
@@ -30,7 +31,7 @@ jobs:
                   sleep 4
                   docker exec -t emulator-headless /bin/sh -c  'echo no | avdmanager create avd --force -n avd28 -k "system-images;android-29;google_apis;x86_64"'
                   sleep 4
-                  docker exec -t emulator-headless  /bin/sh -c  'emulator -avd avd28 -no-audio -no-window -no-accel -partition-size 8000 delay-adb -wipe-data -no-window'&
+                  docker exec -t emulator-headless  /bin/sh -c  'emulator -avd avd28 -no-audio -no-window -no-accel -partition-size 8000 -wipe-data -no-window -no-boot-anim'&
                   sleep 120
                   echo "check devices againr"
                   /usr/local/lib/android/sdk/platform-tools/adb devices
