--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -32,9 +32,11 @@ jobs:
                   docker exec -t emulator-headless /bin/sh -c  'echo no | avdmanager create avd --force -n avd28 -k "system-images;android-29;google_apis;x86_64"'
                   sleep 4
                   docker exec -t emulator-headless  /bin/sh -c  'emulator -avd avd28 -no-audio -no-window -no-accel -partition-size 8000 -wipe-data -no-window -no-boot-anim'&
-                  sleep 4
+                  sleep 150
                   echo "check devices againr"
                   /usr/local/lib/android/sdk/platform-tools/adb devices
+                  /usr/local/lib/android/sdk/platform-tools/adb shell pm list packages
+                  
                   echo "installing the app"
                   /usr/local/lib/android/sdk/platform-tools/adb install /home/runner/work/codewars_challenges/codewars_challenges/apps/app-debug.apk
                   echo "everything is fine.. deleting docker container again"
