--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -21,7 +21,7 @@ jobs:
                   sudo apt-get update
                   echo "starting installing"
                   /usr/local/lib/android/sdk/platform-tools/adb version 
-                  /usr/local/lib/android/sdk/platform-tools/adb devices | grep emulator
+                  adb devices | grep emulator | cut -f1 | while read line; do adb -s $line emu kill; done
                   /usr/local/lib/android/sdk/platform-tools/adb kill-server
                   
                   /usr/local/lib/android/sdk/cmdline-tools/latest/bin/sdkmanager "platform-tools" "platforms;android-29" "emulator"
