--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -20,9 +20,8 @@ jobs:
                   ls /home/runner/work/codewars_challenges/codewars_challenges
                   sudo apt-get update
                   echo "starting installing"
-                  /usr/local/lib/android/sdk/platform-tools/adb version 
-                  adb devices | grep emulator | cut -f1 | while read line; do adb -s $line emu kill; done
-
+                  /usr/local/lib/android/sdk/platform-tools/adb version  
+                  /usr/local/lib/android/sdk/platform-tools/adb kill-server
                   
                   /usr/local/lib/android/sdk/cmdline-tools/latest/bin/sdkmanager "platform-tools" "platforms;android-29" "emulator"
                   /usr/local/lib/android/sdk/cmdline-tools/latest/bin/sdkmanager "system-images;android-29;default;x86_64"
@@ -34,8 +33,8 @@ jobs:
                   docker exec -t emulator-headless /bin/sh -c  'echo no | avdmanager create avd --force -n avd28 -k "system-images;android-29;default;x86_64"'
                   sleep 4
                   docker exec -t emulator-headless  /bin/sh -c  'emulator -avd avd28 -no-audio -no-window -no-accel -partition-size 11000 -no-snapshot-load -wipe-data -no-window -no-boot-anim'&
-                  sleep 120
-                  echo "check devices again"
+                  sleep 150
+                  echo "check devices againnn"
                   /usr/local/lib/android/sdk/platform-tools/adb devices
                   /usr/local/lib/android/sdk/platform-tools/adb shell pm list packages
                   
