--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -41,6 +41,9 @@ jobs:
                   echo "installing the app"
                   /usr/local/lib/android/sdk/platform-tools/adb logcat&
                   /usr/local/lib/android/sdk/platform-tools/adb install /home/runner/work/codewars_challenges/codewars_challenges/apps/app-x86_64-release.apk || true
+                  /usr/local/lib/android/sdk/platform-tools/adb kill-server
+                  /usr/local/lib/android/sdk/platform-tools/adb start-server
+                  /usr/local/lib/android/sdk/platform-tools/adb devices
                   /usr/local/lib/android/sdk/platform-tools/adb shell pm list packages
                   echo "everything is fine.. deleting docker container again"
                   docker container stop emulator-headless
