--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -10,7 +10,7 @@ jobs:
                uses: reactivecircus/android-emulator-runner@v2
                with:
                  api-level: 29
-             - name: start emulator headless
+             - name: start emulator headless-
                shell: bash
                run: |
                   set -x
