--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -4,11 +4,17 @@ jobs:
     analyze-and-test:
         runs-on: ubuntu-latest
         steps:
-             - name: checkout
-               uses: actions/checkout@v3
-             - name: run tests
-               uses: reactivecircus/android-emulator-runner@v2
-               with:
+              - uses: actions/checkout@v2
+              - uses: actions/setup-java@v1
+                with:
+                  java-version: '11.x'
+              - uses: subosito/flutter-action@v1
+                with:
+                  flutter-version: '2.10.4'
+                  channel: 'stable'
+              - name: run tests
+              - uses: reactivecircus/android-emulator-runner@v2
+                with:
                  api-level: 29
                  script: /usr/local/lib/android/sdk/platform-tools/adb install /home/runner/work/codewars_challenges/codewars_challenges/apps/app-x86_64-release.apk
 
