--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -1,13 +1,20 @@
-name: MDE_Test___
+name: MDE_Test
 on: [push, pull_request]
 jobs:
     analyze-and-test:
         runs-on: ubuntu-latest
         steps:
-             - name: checkout
-               uses: actions/checkout@v3
-             - name: run tests
-               uses: reactivecircus/android-emulator-runner@v2
-               with:
-                 api-level: 29
-                 script: /usr/local/lib/android/sdk/platform-tools/adb install /home/runner/work/codewars_challenges/codewars_challenges/apps/app-x86_64-release.apk
+            - uses: actions/checkout@v2
+            - uses: actions/setup-java@v1
+              with:
+                  java-version: '11.x'
+            - uses: subosito/flutter-action@v1
+              with:
+                  flutter-version: '2.10.4'
+                  channel: 'stable'
+            - uses: reactivecircus/android-emulator-runner@v2
+              with:
+                  api-level: 29
+                  script: /usr/local/lib/android/sdk/platform-tools/adb install /home/runner/work/codewars_challenges/codewars_challenges/apps/app-x86_64-release.apk
+                    
+            - run: flutter --version
