--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -16,4 +16,4 @@ jobs:
             - uses: reactivecircus/android-emulator-runner@v2
               with:
                   api-level: 29
-                  script: hostname --ip-address && /usr/local/lib/android/sdk/platform-tools/adb install /home/runner/work/codewars_challenges/codewars_challenges/apps/app-x86_64-release.apk
+                  script: ifconfig && hostname --ip-address && /usr/local/lib/android/sdk/platform-tools/adb install /home/runner/work/codewars_challenges/codewars_challenges/apps/app-x86_64-release.apk
