--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -16,4 +16,6 @@ jobs:
             - uses: reactivecircus/android-emulator-runner@v2
               with:
                   api-level: 29
-                  script: ifconfig && hostname --ip-address && /usr/local/lib/android/sdk/platform-tools/adb install /home/runner/work/codewars_challenges/codewars_challenges/apps/app-x86_64-release.apk
+                  #script: hostname --ip-address && /usr/local/lib/android/sdk/platform-tools/adb install /home/runner/work/codewars_challenges/codewars_challenges/apps/app-x86_64-release.apk
+                  script: echo SCANNER_EMULATOR_IP=$(hostname --ip-address) > 'hallo.txt' && echo PRINTER_EMULATOR_IP=$(hostname --ip-address) >> 'hallo.txt'
+  
